--- a/app/views/user_cleanup_mailer/cleanup_email.erb
+++ b/app/views/user_cleanup_mailer/cleanup_email.erb
@@ -8,7 +8,7 @@
     - <%= user.full_name %>
   <% end %><br/><br/>
 
-  We zouden ook graag willen dat van deze leden de lidmaatschapsformulieren uit de map worden vernietigd. Als dit gebeurd is zouden we graag een bevestiging hiervan willen ontvangen via privacy@csvalpha.nl.
+  Vergeet niet de lidmaatschapsformulieren van deze leden te vernietigd. Als dit gebeurd is zouden we dan op de hoogte kunnen worden gebracht door middel van een mailtje naar privacy@csvalpha.nl.
 
 <% end %>
 <br/>
