Improved moderation mails layout

--- a/app/views/mail_moderation_mailer/request_for_moderation_email.html.erb
+++ b/app/views/mail_moderation_mailer/request_for_moderation_email.html.erb
@@ -3,5 +3,5 @@
 '<%= @subject %>' naar: <%= @mail_alias %><br/><br/>
 
 Je modereert namens de groep <%= @moderator %>.<br />
-Er kan gemodereerd worden via: <%= @moderation_url %><br />
+Klik hieronder om de e-mail te modereren.<br />
 Dit kan tot en met <%= (@received_at + 3.days).strftime('%a %-d %b %Y %H:%M') %>. Daarna vervalt dit verzoek automatisch.
