--- a/app/views/mail_moderation_mailer/reminder_for_moderation_email.erb
+++ b/app/views/mail_moderation_mailer/reminder_for_moderation_email.erb
@@ -1,9 +1,7 @@
-<b>Herinnering: </b><br/><br/>
-
 <%= @sender %> heeft een e-mail gestuurd:<br/><br/>
 
 '<%= @subject %>' naar: <%= @mail_alias %><br/><br/>
 
 Je modereert namens de groep <%= @moderator %>.<br />
-Er kan gemodereerd worden via: <%= @moderation_url %><br />
+Klik hieronder om de e-mail te modereren.<br />
 Dit kan tot en met <%= (@received_at + 3.days).strftime('%a %-d %b %Y %H:%M') %>. Daarna vervalt dit verzoek automatisch.
