Feature/better smtp management (#207)
* Disable SMTP before destroy

* Clearify smtp mailer

* Fix specs

--- a/app/views/mail_smtp_mailer/disabled_email.erb
+++ b/app/views/mail_smtp_mailer/disabled_email.erb
@@ -1,4 +1,4 @@
-Je mailalias <b><%= @mail_alias.email %></b> is opgeheven. Dit aangezien je geen recht meer had om gebruik te maken van dit alias.<br/>
+Je toegang tot het mailalias <b><%= @mail_alias.email %></b> is opgeheven. Dit betekent dat je geen mail meer kan versturen vanaf dit adres.<br/>
 Mocht je het hier niet mee eens zijn of nog mail via dit alias ontvangen horen we dit graag.<br/><br/>
 
 We hopen je hier voldoende mee te hebben geïnformeerd.
