--- a/app/views/mail_bounce_mailer/mail_bounced.html.erb
+++ b/app/views/mail_bounce_mailer/mail_bounced.html.erb
@@ -1,4 +1,5 @@
 Uw bericht met als onderwerp "<%= @subject %>" aan "<%= @to %>" is helaas niet succesvol afgeleverd.<br/>
 De reden hiervoor is: <b><%= @reason %></b>. Mocht dit een bericht aan een mailgroep zijn kan het ook zijn dat het bericht maar bij één ontvanger niet is aangekomen.<br/><br/>
 
-Voor meer vragen kunt u mailen naar mailbeheer@csvalpha.nl
+Voor meer vragen kunt u mailen naar <a href="mailto:<%= Rails.application.config.x.ict_email %>" style="color: #adb5bd"><%= Rails.application.config.x.ict_email %></a>
+
