--- a/app/views/mail_bounce_mailer/address_unknown.html.erb
+++ b/app/views/mail_bounce_mailer/address_unknown.html.erb
@@ -1,4 +1,4 @@
 U heeft geprobeerd een mail te versturen naar een @csvalpha.nl mailadres. Deze kan helaas niet bezorgd worden. Het gebruikte mailadres <b><%= @to %></b> is namelijk niet in gebruik. Controleer het mailadres nogmaals.
 <br/><br/>
 
-Mocht u zeker zijn dat het mailadres klopt of niet weten welk mailadres u moet gebruiken kunt u mailen naar abactis@csvalpha.nl
+Mocht u zeker zijn dat het mailadres klopt of niet weten welk mailadres u moet gebruiken kunt u mailen naar <a href="mailto:<%= Rails.application.config.x.ict_email %>" style="color: #adb5bd"><%= Rails.application.config.x.ict_email %></a>
